# feruca-benchmarks

./: Cargo.toml  README.md
benches/: accents.rs  alphabet.rs  mars-de.rs  melania-sl.rs
src/: main.rs
test-data/: melania-sl.txt
