[package]
name = "feruca-benchmarks"
version = "0.1.0"
edition = "2024"

[dependencies]
feruca = { git = "https://github.com/theodore-s-beers/feruca" }
icu = "1.5.0"
icu_testdata = "1.5.0"

[dev-dependencies]
criterion = "0.5.1"

[profile.release]
debug = true
lto = true

[[bench]]
name = "accents"
harness = false

[[bench]]
name = "alphabet"
harness = false

[[bench]]
name = "mars-de"
harness = false

[[bench]]
name = "melania-sl"
harness = false
